--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,5 +1,8 @@
 FROM lizhenliang/java:8-jdk-alpine
 LABEL maintainer www.ctnrs.com
+RUN  sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
+     apk add -U tzdata && \
+     ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 COPY ./target/gateway-service.jar ./
 COPY skywalking /skywalking
 EXPOSE 9999
