--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,6 +1,7 @@
 FROM java:8-jdk-alpine
 LABEL maintainer lizhenliang/www.ctnrs.com
-RUN  apk add -U tzdata && \
+RUN  sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
+     apk add -U tzdata && \
      ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 COPY ./target/gateway-service.jar ./
 EXPOSE 9999
