--- a/portal-service/Dockerfile
+++ b/portal-service/Dockerfile
@@ -1,6 +1,7 @@
 FROM java:8-jdk-alpine
-LABEL maintainer lizhenliang/www.ctnrs.com
-RUN  apk add -U tzdata && \
+LABEL maintainer www.aliangedu.cn
+RUN  sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
+     apk add -U tzdata && \
      ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 COPY ./target/portal-service.jar ./
 EXPOSE 8080
