--- a/k8s/gateway.yaml
+++ b/k8s/gateway.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: gateway 
@@ -10,9 +10,12 @@ spec:
       http:
         paths:
         - path: /
+          pathType: Prefix
           backend:
-            serviceName: gateway
-            servicePort: 9999
+            service: 
+              name: gateway
+              port: 
+                number: 9999
 ---
 apiVersion: v1
 kind: Service
