--- a/k8s/portal.yaml
+++ b/k8s/portal.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: portal 
@@ -9,9 +9,12 @@ spec:
       http:
         paths:
         - path: /
+          pathType: Prefix
           backend:
-            serviceName: portal 
-            servicePort: 8080
+            service: 
+              name: portal
+              port: 
+                number: 8080
 ---
 apiVersion: v1
 kind: Service
