--- a/k8s/eureka.yaml
+++ b/k8s/eureka.yaml
@@ -1,18 +1,21 @@
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: eureka 
   namespace: ms 
 spec:
   rules:
-    - host: eureka.ctnrs.com 
+    - host: eureka.aliangedu.cn 
       http:
         paths:
         - path: /
+          pathType: Prefix
           backend:
-            serviceName: eureka 
-            servicePort: 8888
+            service: 
+              name: eureka
+              port: 
+                number: 8888
 ---
 apiVersion: v1
 kind: Service
