--- a/k8s/portal.yaml
+++ b/k8s/portal.yaml
@@ -4,6 +4,7 @@ metadata:
   name: portal 
   namespace: ms 
 spec:
+  ingressClassName: nginx
   rules:
     - host: portal.aliangedu.cn
       http:
